--- a/app/design/frontend/base/default/template/catalog/product/list/related.phtml
+++ b/app/design/frontend/base/default/template/catalog/product/list/related.phtml
@@ -28,7 +28,7 @@
                     <?php endif ?>
                 <?php endif ?>
                 <div class="product">
-                    <a href="<?= $_item->getProductUrl() ?>" title="<?= $this->escapeHtml($_item->getName()) ?>" class="product-image"><img src="<?= $this->helper('catalog/image')->init($_item, 'thumbnail')->resize(50) ?>" width="50" height="50" alt="<?= $this->escapeHtml($_item->getName()) ?>" /></a>
+                    <a href="<?= $_item->getProductUrl() ?>" title="<?= $this->escapeHtml($_item->getName()) ?>" class="product-image"><img src="<?= $this->helper('catalog/image')->init($_item, 'thumbnail')->resize(50) ?>" srcset="<?= $this->helper('catalog/image')->init($_item, 'thumbnail')->resize(100) ?> 2x" width="50" height="50" alt="<?= $this->escapeHtml($_item->getName()) ?>" /></a>
                     <div class="product-details">
                         <p class="product-name"><a href="<?= $_item->getProductUrl() ?>"><?= $this->escapeHtml($_item->getName()) ?></a></p>
                         <?= $this->getPriceHtml($_item, true, '-related') ?>
