--- a/app/design/frontend/rwd/default/template/catalog/product/view/type/grouped.phtml
+++ b/app/design/frontend/rwd/default/template/catalog/product/view/type/grouped.phtml
@@ -36,6 +36,7 @@
                 <td class='image'>
                     <img class="thumbnail"
                          src="<?= $this->helper('catalog/image')->init($_item, 'thumbnail')->constrainOnly(true)->resize(105, 80) ?>"
+                         srcset="<?= $this->helper('catalog/image')->init($_item, 'thumbnail')->constrainOnly(true)->resize(210, 160) ?> 2x"
                          alt="<?= $this->escapeHtml($this->getImageLabel()) ?>"
                          title="<?= $this->escapeHtml($this->getImageLabel()) ?>" />
                 </td>
