--- a/app/design/frontend/base/default/template/catalog/product/compare/list.phtml
+++ b/app/design/frontend/base/default/template/catalog/product/compare/list.phtml
@@ -48,7 +48,7 @@ $_params = $this->escapeHtml(json_encode(['form_key' => $this->getFormKey()]));
                     <th>&nbsp;</th>
                 <?php endif ?>
                 <td>
-                    <a class="product-image" href="#" onclick="setPLocation('<?= $this->getProductUrl($_item) ?>', true)" title="<?= $this->stripTags($_item->getName(), null, true) ?>"><img src="<?= $this->helper('catalog/image')->init($_item, 'small_image')->resize(125, 125) ?>" width="125" height="125" alt="<?= $this->stripTags($_item->getName(), null, true) ?>" /></a>
+                    <a class="product-image" href="#" onclick="setPLocation('<?= $this->getProductUrl($_item) ?>', true)" title="<?= $this->stripTags($_item->getName(), null, true) ?>"><img src="<?= $this->helper('catalog/image')->init($_item, 'small_image')->resize(125) ?>" srcset="<?= $this->helper('catalog/image')->init($_item, 'small_image')->resize(250) ?> 2x" width="125" height="125" alt="<?= $this->stripTags($_item->getName(), null, true) ?>" /></a>
                     <h2 class="product-name"><a href="#" onclick="setPLocation('<?= $this->getProductUrl($_item) ?>', true)" title="<?= $this->stripTags($_item->getName(), null, true) ?>"><?= $this->helper('catalog/output')->productAttribute($_item, $_item->getName(), 'name') ?></a></h2>
                     <?= $this->getReviewsSummaryHtml($_item, 'short') ?>
                     <?= $this->getPriceHtml($_item, true, '-compare-list-top') ?>
@@ -97,7 +97,9 @@ $_params = $this->escapeHtml(json_encode(['form_key' => $this->getFormKey()]));
                             <?= $this->getPriceHtml($_item, true, '-compare-list-' . $_attribute->getCode()) ?>
                             <?php break;
                         case "small_image": ?>
-                            <img src="<?= $this->helper('catalog/image')->init($_item, 'small_image')->resize(125, 125) ?>" width="125" height="125" alt="<?= $this->escapeHtml($_item->getName()) ?>" title="<?= $this->escapeHtml($_item->getName()) ?>" />
+                            <img src="<?= $this->helper('catalog/image')->init($_item, 'small_image')->resize(125, 125) ?>"
+                                 srcset="<?= $this->helper('catalog/image')->init($_item, 'small_image')->resize(250, 250) ?> 2x"
+                                 width="125" height="125" alt="<?= $this->escapeHtml($_item->getName()) ?>" title="<?= $this->escapeHtml($_item->getName()) ?>" />
                             <?php break;
                         case "date":
                               echo substr($this->getProductAttributeValue($_item, $_attribute),0,10);
