--- a/app/design/frontend/base/default/template/catalog/product/widget/new/column/new_default_list.phtml
+++ b/app/design/frontend/base/default/template/catalog/product/widget/new/column/new_default_list.phtml
@@ -22,7 +22,7 @@
             <ol class="mini-products-list" id="widget-new-products-<?= $suffix ?>">
             <?php foreach ($_products->getItems() as $_product): ?>
                 <li class="item">
-                    <a class="product-image" href="<?= $_product->getProductUrl() ?>" title="<?= $this->stripTags($_product->getName(), null, true) ?>"><img src="<?= $this->helper('catalog/image')->init($_product, 'thumbnail')->resize(50) ?>" width="50" height="50" alt="<?= $this->stripTags($_product->getName(), null, true) ?>" /></a>
+                    <a class="product-image" href="<?= $_product->getProductUrl() ?>" title="<?= $this->stripTags($_product->getName(), null, true) ?>"><img src="<?= $this->helper('catalog/image')->init($_product, 'thumbnail')->resize(50) ?>" srcset="<?= $this->helper('catalog/image')->init($_product, 'thumbnail')->resize(100) ?> 2x" width="50" height="50" alt="<?= $this->stripTags($_product->getName(), null, true) ?>" /></a>
                     <div class="product-details">
                         <p class="product-name"><a href="<?= $_product->getProductUrl() ?>" title="<?= $this->stripTags($_product->getName(), null, true) ?>)"><?= $this->helper('catalog/output')->productAttribute($_product, $_product->getName() , 'name') ?></a></p>
                         <?= $this->getPriceHtml($_product, true, '-widget-new-'.$suffix) ?>
