--- a/app/design/frontend/base/default/template/giftmessage/inline.phtml
+++ b/app/design/frontend/base/default/template/giftmessage/inline.phtml
@@ -204,7 +204,10 @@
                  <li class="item">
                      <div class="product-img-box">
                          <p class="product-image">
-                             <img src="<?= $this->helper('catalog/image')->init($_product, 'thumbnail')->resize(75) ?>" width="75" height="75" alt="<?= $this->escapeHtml($_product->getName()) ?>" title="<?= $this->escapeHtml($_product->getName()) ?>" />
+                             <img src="<?= $this->helper('catalog/image')->init($_product, 'thumbnail')->resize(75) ?>"
+                                  srcset="<?= $this->helper('catalog/image')->init($_product, 'thumbnail')->resize(150) ?> 2x"
+                                  width="75" height="75" alt="<?= $this->escapeHtml($_product->getName()) ?>"
+                                  title="<?= $this->escapeHtml($_product->getName()) ?>" />
                          </p>
                          <p class="number"><?= $this->__('Item %d of %d', $_index+1, $this->countItems()) ?></p>
                      </div>
@@ -315,7 +318,7 @@
              <?php $_product=$_item->getProduct() ?>
                  <li class="item">
                      <div class="product-img-box">
-                         <p class="product-image"><img src="<?= $this->helper('catalog/image')->init($_product, 'small_image')->resize(75) ?>" width="75" height="75" alt="<?= $this->escapeHtml($_product->getName()) ?>" title="<?= $this->escapeHtml($_product->getName()) ?>" /></p>
+                         <p class="product-image"><img src="<?= $this->helper('catalog/image')->init($_product, 'small_image')->resize(75) ?>" srcset="<?= $this->helper('catalog/image')->init($_product, 'small_image')->resize(150) ?> 2x" width="75" height="75" alt="<?= $this->escapeHtml($_product->getName()) ?>" title="<?= $this->escapeHtml($_product->getName()) ?>" /></p>
                          <p class="number"><?= $this->__('Item %d of %d', $_index+1, $this->countItems()) ?></p>
                      </div>
                      <div class="details">
