--- a/app/design/frontend/base/default/template/reports/home_product_viewed.phtml
+++ b/app/design/frontend/base/default/template/reports/home_product_viewed.phtml
@@ -21,7 +21,7 @@
         <ul class="products-grid">
         <?php endif ?>
             <li class="item">
-                <a href="<?= $this->getProductUrl($_product) ?>" title="<?= $this->stripTags($_product->getName(), null, true) ?>" class="product-image"><img src="<?= $this->helper('catalog/image')->init($_product, 'small_image')->resize(135) ?>" width="135" height="135" alt="<?= $this->stripTags($_product->getName(), null, true) ?>" /></a>
+                <a href="<?= $this->getProductUrl($_product) ?>" title="<?= $this->stripTags($_product->getName(), null, true) ?>" class="product-image"><img src="<?= $this->helper('catalog/image')->init($_product, 'small_image')->resize(135) ?>" srcset="<?= $this->helper('catalog/image')->init($_product, 'small_image')->resize(270) ?> 2x" width="135" height="135" alt="<?= $this->stripTags($_product->getName(), null, true) ?>" /></a>
                 <h3 class="product-name"><a href="<?= $this->getProductUrl($_product) ?>" title="<?= $this->stripTags($_product->getName(), null, true) ?>"><?= $this->helper('catalog/output')->productAttribute($_product, $_product->getName() , 'name') ?></a></h3>
                 <?= $this->getReviewsSummaryHtml($_product, 'short') ?>
                 <?= $this->getPriceHtml($_product, true, '-home-viewed') ?>
