--- a/app/design/frontend/base/default/template/reports/widget/compared/column/compared_images_list.phtml
+++ b/app/design/frontend/base/default/template/reports/widget/compared/column/compared_images_list.phtml
@@ -21,7 +21,7 @@
             <ol class="mini-products-images-list" id="widget-compared-<?= $suffix ?>">
             <?php $i=0; foreach ($_products as $_product): ?>
                 <li class="item">
-                    <a class="product-image" href="<?= $_product->getProductUrl() ?>" title="<?= $this->stripTags($_product->getName(), null, true) ?>"><img src="<?= $this->helper('catalog/image')->init($_product, 'thumbnail')->resize(76) ?>" width="76" height="76" alt="<?= $this->stripTags($_product->getName(), null, true) ?>" /></a>
+                    <a class="product-image" href="<?= $_product->getProductUrl() ?>" title="<?= $this->stripTags($_product->getName(), null, true) ?>"><img src="<?= $this->helper('catalog/image')->init($_product, 'thumbnail')->resize(76) ?>" srcset="<?= $this->helper('catalog/image')->init($_product, 'thumbnail')->resize(152) ?> 2x" width="76" height="76" alt="<?= $this->stripTags($_product->getName(), null, true) ?>" /></a>
                 </li>
             <?php endforeach ?>
             </ol>
