--- a/app/design/frontend/base/default/template/reports/widget/viewed/column/viewed_default_list.phtml
+++ b/app/design/frontend/base/default/template/reports/widget/viewed/column/viewed_default_list.phtml
@@ -23,7 +23,7 @@
             <ol class="mini-products-list" id="widget-viewed-<?= $suffix ?>">
             <?php foreach ($_products as $_product): ?>
                 <li class="item">
-                    <a class="product-image" href="<?= $_product->getProductUrl() ?>" title="<?= $this->stripTags($_product->getName(), null, true) ?>"><img src="<?= $this->helper('catalog/image')->init($_product, 'small_image')->resize(50) ?>" width="50" height="50" alt="<?= $this->stripTags($_product->getName(), null, true) ?>" /></a>
+                    <a class="product-image" href="<?= $_product->getProductUrl() ?>" title="<?= $this->stripTags($_product->getName(), null, true) ?>"><img src="<?= $this->helper('catalog/image')->init($_product, 'small_image')->resize(50) ?>" srcset="<?= $this->helper('catalog/image')->init($_product, 'small_image')->resize(100) ?> 2x" width="50" height="50" alt="<?= $this->stripTags($_product->getName(), null, true) ?>" /></a>
                     <div class="product-details">
                         <p class="product-name"><a href="<?= $_product->getProductUrl() ?>" title="<?= $this->stripTags($_product->getName(), null, true) ?>"><?= $this->helper('catalog/output')->productAttribute($_product, $_product->getName() , 'name') ?></a></p>
                         <?= $this->getPriceHtml($_product, true, '-widget-viewed-'.$suffix) ?>
