--- a/app/design/frontend/base/default/template/reports/widget/viewed/content/viewed_grid.phtml
+++ b/app/design/frontend/base/default/template/reports/widget/viewed/content/viewed_grid.phtml
@@ -25,7 +25,7 @@
             <ul class="products-grid">
         <?php endif ?>
                 <li class="item">
-                    <a href="<?= $_product->getProductUrl() ?>" title="<?= $this->stripTags($_product->getName(), null, true) ?>" class="product-image"><img src="<?= $this->helper('catalog/image')->init($_product, 'small_image')->resize(85) ?>" width="85" height="85" alt="<?= $this->stripTags($_product->getName(), null, true) ?>" /></a>
+                    <a href="<?= $_product->getProductUrl() ?>" title="<?= $this->stripTags($_product->getName(), null, true) ?>" class="product-image"><img src="<?= $this->helper('catalog/image')->init($_product, 'small_image')->resize(85) ?>" srcset="<?= $this->helper('catalog/image')->init($_product, 'small_image')->resize(170) ?> 2x" width="85" height="85" alt="<?= $this->stripTags($_product->getName(), null, true) ?>" /></a>
                     <h3 class="product-name"><a href="<?= $_product->getProductUrl() ?>" title="<?= $this->stripTags($_product->getName(), null, true) ?>"><?= $this->helper('catalog/output')->productAttribute($_product, $_product->getName() , 'name') ?></a></h3>
                     <?= $this->getReviewsSummaryHtml($_product, 'short') ?>
                     <?= $this->getPriceHtml($_product, true, '-widget-viewed-grid') ?>
