--- a/app/design/frontend/base/default/template/tag/customer/view.phtml
+++ b/app/design/frontend/base/default/template/tag/customer/view.phtml
@@ -32,7 +32,7 @@
     <?php $iterator = 0 ?>
     <?php foreach($this->getMyProducts() as $_product): ?>
         <tr<?php if($iterator % 2 == 0): ?> class="odd"<?php $iterator++;endif; ?>>
-            <td><a href="<?= $_product->getProductUrl() ?>" title="<?= $this->escapeHtml($_product->getName()) ?>" class="product-image"><img src="<?= $this->helper('catalog/image')->init($_product, 'small_image')->resize(100, 100) ?>" width="100" height="100" alt="<?= $this->escapeHtml($_product->getName()) ?>" /></a></td>
+            <td><a href="<?= $_product->getProductUrl() ?>" title="<?= $this->escapeHtml($_product->getName()) ?>" class="product-image"><img src="<?= $this->helper('catalog/image')->init($_product, 'small_image')->resize(100, 100) ?>" srcset="<?= $this->helper('catalog/image')->init($_product, 'small_image')->resize(200, 200) ?> 2x" width="100" height="100" alt="<?= $this->escapeHtml($_product->getName()) ?>" /></a></td>
             <td>
                 <h2 class="product-name"><a href="<?= $_product->getProductUrl() ?>"><?= $this->escapeHtml($_product->getName()) ?></a></h2>
                 <?= $this->getReviewsSummaryHtml($_product, 'short') ?>
