--- a/app/design/frontend/base/default/template/wishlist/email/items.phtml
+++ b/app/design/frontend/base/default/template/wishlist/email/items.phtml
@@ -20,7 +20,7 @@
         <?php /** @var Mage_Catalog_Model_Product $_product */ ?>
         <?php $_product = $item->getProduct(); ?>
         <td width="32%">
-            <p align="center" style="font-size:12px;"><a href="<?= $this->getProductUrl($_product) ?>"><img src="<?= $this->helper('catalog/image')->init($_product, 'small_image')->resize(135) ?>" style="border:1px solid #ccc;" width="135" height="135" alt="" /></a></p>
+            <p align="center" style="font-size:12px;"><a href="<?= $this->getProductUrl($_product) ?>"><img src="<?= $this->helper('catalog/image')->init($_product, 'small_image')->resize(135) ?>" srcset="<?= $this->helper('catalog/image')->init($_product, 'small_image')->resize(270) ?> 2x" style="border:1px solid #ccc;" width="135" height="135" alt="" /></a></p>
             <p align="center" style="font-size:12px;"><a href="<?= $this->getProductUrl($_product) ?>" style="color:#203548;"><strong><?= $this->escapeHtml($_product->getName()) ?></strong></a></p>
             <?php if($this->hasDescription($item)): ?><p align="center" style="font-size:12px;"><?= $this->__('Comment') ?>:<br /><?= $this->getEscapedDescription($item) ?></p><?php endif ?>
             <p align="center" style="font-size:12px;"><a href="<?= $this->getProductUrl($_product) ?>" style="color:#1E7EC8;"><?= $this->__('View Product') ?></a> <small>
