--- a/app/design/frontend/base/default/template/wishlist/item/column/image.phtml
+++ b/app/design/frontend/base/default/template/wishlist/item/column/image.phtml
@@ -16,5 +16,7 @@ $item = $this->getItem();
 $product = $item->getProduct();
 ?>
 <a class="product-image" href="<?= $this->getProductUrl($item) ?>" title="<?= $this->escapeHtml($product->getName()) ?>">
-    <img src="<?= $this->helper('catalog/image')->init($product, 'small_image')->resize(113, 113) ?>" width="113" height="113" alt="<?= $this->escapeHtml($product->getName()) ?>" />
+    <img src="<?= $this->helper('catalog/image')->init($product, 'small_image')->resize(113, 113) ?>"
+         srcset="<?= $this->helper('catalog/image')->init($product, 'small_image')->resize(226, 226) ?> 2x"
+         width="113" height="113" alt="<?= $this->escapeHtml($product->getName()) ?>" />
 </a>
