--- a/app/design/frontend/rwd/default/template/catalog/product/widget/new/content/new_grid.phtml
+++ b/app/design/frontend/rwd/default/template/catalog/product/widget/new/content/new_grid.phtml
@@ -28,7 +28,7 @@
                     <?php $_imgSize = 210; ?>
                     <?php // The image size is locked at 210 for this for display purposes. CSS has it at 75% which should equate to 278px?>
                     <a href="<?= $_product->getProductUrl() ?>" title="<?= $this->stripTags($_product->getName(), null, true) ?>" class="product-image">
-                        <img src="<?= $this->helper('catalog/image')->init($_product, 'small_image')->resize(210) ?>" alt="<?= $this->stripTags($_product->getName(), null, true) ?>" />
+                        <img src="<?= $this->helper('catalog/image')->init($_product, 'small_image')->resize(210) ?>" srcset="<?= $this->helper('catalog/image')->init($_product, 'small_image')->resize(420) ?> 2x" alt="<?= $this->stripTags($_product->getName(), null, true) ?>" />
                     </a>
                     <div class="product-info">
                         <h3 class="product-name"><a href="<?= $_product->getProductUrl() ?>" title="<?= $this->stripTags($_product->getName(), null, true) ?>"><?= $this->helper('catalog/output')->productAttribute($_product, $_product->getName() , 'name') ?></a></h3>
