--- a/app/design/frontend/rwd/default/template/catalog/product/widget/new/content/new_list.phtml
+++ b/app/design/frontend/rwd/default/template/catalog/product/widget/new/content/new_list.phtml
@@ -20,27 +20,10 @@
         <ol class="mini-products-list">
         <?php $i=0; foreach ($_products->getItems() as $_product): ?>
             <li class="item<?= (++$i == count($_products))?' last':'' ?>">
-                <a href="<?= $_product->getProductUrl() ?>" title="<?= $this->stripTags($_product->getName(), null, true) ?>" class="product-image"><img src="<?= $this->helper('catalog/image')->init($_product, 'small_image')->resize(50) ?>" width="50" height="50" alt="<?= $this->stripTags($_product->getName(), null, true) ?>" /></a>
+                <a href="<?= $_product->getProductUrl() ?>" title="<?= $this->stripTags($_product->getName(), null, true) ?>" class="product-image"><img src="<?= $this->helper('catalog/image')->init($_product, 'small_image')->resize(50) ?>" width="50" height="50" srcset="<?= $this->helper('catalog/image')->init($_product, 'small_image')->resize(100) ?> 2x" alt="<?= $this->stripTags($_product->getName(), null, true) ?>" /></a>
                 <div class="product-details">
                     <div class="f-fix">
                         <h3 class="product-name"><a href="<?= $_product->getProductUrl() ?>" title="<?= $this->stripTags($_product->getName(), null, true) ?>)"><?= $this->helper('catalog/output')->productAttribute($_product, $_product->getName() , 'name') ?></a></h3>
-                        <?php /* Removing this functionality from RWD
-                        <?= $this->getReviewsSummaryHtml($_product, 'short') ?>
-                        <?= $this->getPriceHtml($_product, true, '-widget-new-list') ?>
-                        <?php if ($_product->isSaleable()): ?>
-                            <button type="button" title="<?= Mage::helper('core')->quoteEscape($this->__('Add to Cart')) ?>" class="button btn-cart" onclick="setLocation('<?= $this->getAddToCartUrl($_product) ?>')"><?= $this->__('Add to Cart') ?></button>
-                        <?php else: ?>
-                            <p class="availability out-of-stock"><span><?= $this->__('Out of stock') ?></span></p>
-                        <?php endif ?>
-                        <ul class="add-to-links">
-                            <?php if ($this->helper('wishlist')->isAllow()) : ?>
-                                <li><a href="<?= $this->getAddToWishlistUrl($_product) ?>" class="link-wishlist"><?= $this->__('Add to Wishlist') ?></a></li>
-                            <?php endif ?>
-                            <?php if($_compareUrl=$this->getAddToCompareUrl($_product)): ?>
-                                <li><span class="separator">|</span> <a href="<?= $_compareUrl ?>" class="link-compare"><?= $this->__('Add to Compare') ?></a></li>
-                            <?php endif ?>
-                        </ul>
-                        */ ?>
                     </div>
                 </div>
             </li>
