--- a/app/design/frontend/rwd/default/template/reports/widget/compared/content/compared_list.phtml
+++ b/app/design/frontend/rwd/default/template/reports/widget/compared/content/compared_list.phtml
@@ -19,7 +19,7 @@
         <ol class="mini-products-list">
         <?php $i=0; foreach ($_products as $_product): ?>
             <li class="item<?= (++$i == count($_products))?' last':'' ?>">
-                <a href="<?= $_product->getProductUrl() ?>" title="<?= $this->stripTags($_product->getName(), null, true) ?>" class="product-image"><img src="<?= $this->helper('catalog/image')->init($_product, 'small_image')->resize(50) ?>" width="50" height="50" alt="<?= $this->stripTags($_product->getName(), null, true) ?>" /></a>
+                <a href="<?= $_product->getProductUrl() ?>" title="<?= $this->stripTags($_product->getName(), null, true) ?>" class="product-image"><img src="<?= $this->helper('catalog/image')->init($_product, 'small_image')->resize(50) ?>" srcset="<?= $this->helper('catalog/image')->init($_product, 'small_image')->resize(100) ?> 2x" width="50" height="50" alt="<?= $this->stripTags($_product->getName(), null, true) ?>" /></a>
                 <div class="product-details">
                     <div class="f-fix">
                         <h3 class="product-name"><a href="<?= $_product->getProductUrl() ?>" title="<?= $this->stripTags($_product->getName(), null, true) ?>)"><?= $this->helper('catalog/output')->productAttribute($_product, $_product->getName() , 'name') ?></a></h3>
