--- a/app/design/frontend/rwd/default/template/reports/widget/viewed/column/viewed_images_list.phtml
+++ b/app/design/frontend/rwd/default/template/reports/widget/viewed/column/viewed_images_list.phtml
@@ -24,7 +24,7 @@
             <?php foreach ($_products as $_product): ?>
                 <li class="item">
                     <?php $_imgSize = 310; // Images will be displayed at roughly this size when viewed at less than the medium breakpoint ?>
-                    <a class="product-image" href="<?= $_product->getProductUrl() ?>" title="<?= $this->stripTags($_product->getName(), null, true) ?>"><img src="<?= $this->helper('catalog/image')->init($_product, 'small_image')->resize($_imgSize) ?>" alt="<?= $this->stripTags($_product->getName(), null, true) ?>" /></a>
+                    <a class="product-image" href="<?= $_product->getProductUrl() ?>" title="<?= $this->stripTags($_product->getName(), null, true) ?>"><img src="<?= $this->helper('catalog/image')->init($_product, 'small_image')->resize($_imgSize) ?>" srcset="<?= $this->helper('catalog/image')->init($_product, 'small_image')->resize($_imgSize * 2) ?> 2x" alt="<?= $this->stripTags($_product->getName(), null, true) ?>" /></a>
                 </li>
             <?php endforeach ?>
             </ol>
