--- a/app/design/frontend/rwd/default/template/review/customer/view.phtml
+++ b/app/design/frontend/rwd/default/template/review/customer/view.phtml
@@ -18,7 +18,7 @@
         <h1><?= $this->__('Review Details') ?></h1>
     </div>
     <div class="product-img-box">
-        <a href="<?= $this->getProductData()->getProductUrl() ?>" title="<?= $this->escapeHtml($this->getProductData()->getName()) ?>" class="product-image"><img src="<?= $this->helper('catalog/image')->init($this->getProductData(), 'small_image')->resize(325,325) ?>" width="325" height="" alt="<?= $this->escapeHtml($this->getProductData()->getName()) ?>" /></a>
+        <a href="<?= $this->getProductData()->getProductUrl() ?>" title="<?= $this->escapeHtml($this->getProductData()->getName()) ?>" class="product-image"><img src="<?= $this->helper('catalog/image')->init($this->getProductData(), 'small_image')->resize(325,325) ?>" srcset="<?= $this->helper('catalog/image')->init($this->getProductData(), 'small_image')->resize(650,650) ?> 2x" width="325" height="" alt="<?= $this->escapeHtml($this->getProductData()->getName()) ?>" /></a>
         <?php if( $this->getRating() && $this->getRating()->getSize()): ?>
             <p class="label"><?= $this->__('Average Customer Rating:') ?></p>
             <?= $this->getReviewsSummaryHtml($this->getProductData()) ?>
