--- a/app/design/frontend/base/default/template/checkout/cart/crosssell.phtml
+++ b/app/design/frontend/base/default/template/checkout/cart/crosssell.phtml
@@ -6,17 +6,11 @@
  * @package     base_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2021-2024 The OpenMage Contributors (https://openmage.org)
- * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
+ * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
-?>
-<?php
-/**
- * Cart cross sell items template
- *
- * @see Mage_Checkout_Block_Cart_Crosssell
- * @var Mage_Checkout_Block_Cart_Crosssell $this 
- */
+
+/** @var Mage_Checkout_Block_Cart_Crosssell $this */
 ?>
 <?php if($this->getItemCount()): ?>
 <?php $_params = $this->escapeHtml(json_encode(['form_key' => $this->getFormKey()])) ?>
@@ -25,7 +19,7 @@
     <ul id="crosssell-products-list">
     <?php foreach ($this->getItems() as $_item): ?>
         <li class="item">
-            <a class="product-image" href="<?= $_item->getProductUrl() ?>" title="<?= $this->escapeHtml($_item->getName()) ?>"><img src="<?= $this->helper('catalog/image')->init($_item, 'thumbnail')->resize(75) ?>" width="75" height="75" alt="<?= $this->escapeHtml($_item->getName()) ?>" /></a>
+            <a class="product-image" href="<?= $_item->getProductUrl() ?>" title="<?= $this->escapeHtml($_item->getName()) ?>"><img src="<?= $this->helper('catalog/image')->init($_item, 'thumbnail')->resize(75) ?>" srcset="<?= $this->helper('catalog/image')->init($_item, 'thumbnail')->resize(150) ?> 2x" width="75" height="75" alt="<?= $this->escapeHtml($_item->getName()) ?>" /></a>
             <div class="product-details">
                 <h3 class="product-name"><a href="<?= $_item->getProductUrl() ?>"><?= $this->escapeHtml($_item->getName()) ?></a></h3>
                 <?= $this->getPriceHtml($_item, true) ?>
