--- a/app/design/frontend/base/default/template/email/productalert/stock.phtml
+++ b/app/design/frontend/base/default/template/email/productalert/stock.phtml
@@ -6,20 +6,18 @@
  * @package     base_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2021-2024 The OpenMage Contributors (https://openmage.org)
- * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
+ * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 
-/**
- * @var Mage_ProductAlert_Block_Email_Stock $this
- */
+/** @var Mage_ProductAlert_Block_Email_Stock $this */
 ?>
 <?php if ($products = $this->getProducts()): ?>
 <p><?= $this->__('You are receiving this notification because you subscribed to receive alerts when the following products are back in stock:') ?></p>
 <table>
 <?php foreach ($products as $product): ?>
     <tr>
-        <td><a href="<?= $product->getProductUrl() ?>" title="<?= $this->escapeHtml($product->getName()) ?>"><img src="<?= $this->helper('catalog/image')->init($product, 'thumbnail')->resize(75, 75) ?>" border="0" align="left" height="75" width="75" alt="<?= $this->escapeHtml($product->getName()) ?>" /></a></td>
+        <td><a href="<?= $product->getProductUrl() ?>" title="<?= $this->escapeHtml($product->getName()) ?>"><img src="<?= $this->helper('catalog/image')->init($product, 'thumbnail')->resize(75, 75) ?>" srcset="<?= $this->helper('catalog/image')->init($product, 'thumbnail')->resize(150, 150) ?> 2x" border="0" align="left" height="75" width="75" alt="<?= $this->escapeHtml($product->getName()) ?>" /></a></td>
         <td>
             <p><a href="<?= $product->getProductUrl() ?>"><strong><?= $this->escapeHtml($product->getName()) ?></strong></a></p>
             <?php $shortDescription = $this->_getFilteredProductShortDescription($product) ?>
