--- a/app/design/frontend/base/default/template/giftmessage/inline.phtml
+++ b/app/design/frontend/base/default/template/giftmessage/inline.phtml
@@ -6,7 +6,7 @@
  * @package     base_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2021-2025 The OpenMage Contributors (https://openmage.org)
- * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
+ * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 
@@ -204,7 +204,10 @@
                  <li class="item">
                      <div class="product-img-box">
                          <p class="product-image">
-                             <img src="<?= $this->helper('catalog/image')->init($_product, 'thumbnail')->resize(75) ?>" width="75" height="75" alt="<?= $this->escapeHtml($_product->getName()) ?>" title="<?= $this->escapeHtml($_product->getName()) ?>" />
+                             <img src="<?= $this->helper('catalog/image')->init($_product, 'thumbnail')->resize(75) ?>"
+                                  srcset="<?= $this->helper('catalog/image')->init($_product, 'thumbnail')->resize(150) ?> 2x"
+                                  width="75" height="75" alt="<?= $this->escapeHtml($_product->getName()) ?>"
+                                  title="<?= $this->escapeHtml($_product->getName()) ?>" />
                          </p>
                          <p class="number"><?= $this->__('Item %d of %d', $_index+1, $this->countItems()) ?></p>
                      </div>
@@ -315,7 +318,7 @@
              <?php $_product=$_item->getProduct() ?>
                  <li class="item">
                      <div class="product-img-box">
-                         <p class="product-image"><img src="<?= $this->helper('catalog/image')->init($_product, 'small_image')->resize(75) ?>" width="75" height="75" alt="<?= $this->escapeHtml($_product->getName()) ?>" title="<?= $this->escapeHtml($_product->getName()) ?>" /></p>
+                         <p class="product-image"><img src="<?= $this->helper('catalog/image')->init($_product, 'small_image')->resize(75) ?>" srcset="<?= $this->helper('catalog/image')->init($_product, 'small_image')->resize(150) ?> 2x" width="75" height="75" alt="<?= $this->escapeHtml($_product->getName()) ?>" title="<?= $this->escapeHtml($_product->getName()) ?>" /></p>
                          <p class="number"><?= $this->__('Item %d of %d', $_index+1, $this->countItems()) ?></p>
                      </div>
                      <div class="details">
