--- a/app/design/frontend/base/default/template/reports/widget/compared/content/compared_list.phtml
+++ b/app/design/frontend/base/default/template/reports/widget/compared/content/compared_list.phtml
@@ -6,7 +6,7 @@
  * @package     base_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2021-2022 The OpenMage Contributors (https://openmage.org)
- * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
+ * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 ?>
@@ -20,7 +20,7 @@
         <ol class="products-list">
         <?php $i=0; foreach ($_products as $_product): ?>
             <li class="item<?= (++$i == count($_products))?' last':'' ?>">
-                <a href="<?= $_product->getProductUrl() ?>" title="<?= $this->stripTags($_product->getName(), null, true) ?>" class="product-image"><img src="<?= $this->helper('catalog/image')->init($_product, 'small_image')->resize(85) ?>" width="85" height="85" alt="<?= $this->stripTags($_product->getName(), null, true) ?>" /></a>
+                <a href="<?= $_product->getProductUrl() ?>" title="<?= $this->stripTags($_product->getName(), null, true) ?>" class="product-image"><img src="<?= $this->helper('catalog/image')->init($_product, 'small_image')->resize(85) ?>" srcset="<?= $this->helper('catalog/image')->init($_product, 'small_image')->resize(170) ?> 2x" width="85" height="85" alt="<?= $this->stripTags($_product->getName(), null, true) ?>" /></a>
                 <div class="product-shop">
                     <div class="f-fix">
                         <h3 class="product-name"><a href="<?= $_product->getProductUrl() ?>" title="<?= $this->stripTags($_product->getName(), null, true) ?>)"><?= $this->helper('catalog/output')->productAttribute($_product, $_product->getName() , 'name') ?></a></h3>
