--- a/app/design/frontend/rwd/default/template/catalog/product/list/upsell.phtml
+++ b/app/design/frontend/rwd/default/template/catalog/product/list/upsell.phtml
@@ -6,7 +6,7 @@
  * @package     rwd_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2021-2024 The OpenMage Contributors (https://openmage.org)
- * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
+ * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 
@@ -22,18 +22,12 @@
     <?php foreach ($this->getItemCollection()->getItems() as $_link): ?>
         <li>
             <a href="<?= $_link->getProductUrl() ?>" title="<?= $this->escapeHtml($_link->getName()) ?>" class="product-image">
-                <img src="<?= $this->helper('catalog/image')->init($_link, 'small_image')->resize(280) ?>" alt="<?= $this->escapeHtml($_link->getName()) ?>" />
+                <img src="<?= $this->helper('catalog/image')->init($_link, 'small_image')->resize(280) ?>" srcset="<?= $this->helper('catalog/image')->init($_link, 'small_image')->resize(560) ?> 2x" alt="<?= $this->escapeHtml($_link->getName()) ?>" />
             </a>
             <h3 class="product-name"><a href="<?= $_link->getProductUrl() ?>" title="<?= $this->escapeHtml($_link->getName()) ?>"><?= $this->escapeHtml($_link->getName()) ?></a></h3>
             <?= $this->getPriceHtml($_link, true, '-upsell') ?>
             <?= $this->getReviewsSummaryHtml($_link) ?>
         </li>
-            <?php /*else: ?>
-            <td class="empty">&nbsp;</td>
-            <?php endif ?>
-        <?php endfor ?>
-        </tr>
-    <?php endfor; */?>
     <?php endforeach ?>
     </ul>
 </div>
