--- a/app/design/frontend/rwd/default/template/catalog/product/widget/new/column/new_images_list.phtml
+++ b/app/design/frontend/rwd/default/template/catalog/product/widget/new/column/new_images_list.phtml
@@ -6,7 +6,7 @@
  * @package     rwd_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2020-2022 The OpenMage Contributors (https://openmage.org)
- * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
+ * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 ?>
@@ -23,7 +23,7 @@
             <?php foreach ($_products->getItems() as $_product): ?>
                 <li class="item">
                     <?php $_imgSize = 310; // Images will be displayed at roughly this size when viewed at less than the medium breakpoint ?>
-                    <a class="product-image" href="<?= $_product->getProductUrl() ?>" title="<?= $this->stripTags($_product->getName(), null, true) ?>"><img src="<?= $this->helper('catalog/image')->init($_product, 'small_image')->resize($_imgSize) ?>" alt="<?= $this->stripTags($_product->getName(), null, true) ?>" /></a>
+                    <a class="product-image" href="<?= $_product->getProductUrl() ?>" title="<?= $this->stripTags($_product->getName(), null, true) ?>"><img src="<?= $this->helper('catalog/image')->init($_product, 'small_image')->resize($_imgSize) ?>" srcset="<?= $this->helper('catalog/image')->init($_product, 'small_image')->resize($_imgSize*2) ?> 2x" alt="<?= $this->stripTags($_product->getName(), null, true) ?>" /></a>
                 </li>
             <?php endforeach ?>
             </ol>
