--- a/app/design/frontend/rwd/default/template/email/catalog/product/list.phtml
+++ b/app/design/frontend/rwd/default/template/email/catalog/product/list.phtml
@@ -6,17 +6,11 @@
  * @package     rwd_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2020-2024 The OpenMage Contributors (https://openmage.org)
- * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
+ * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
-?>
-<?php
-/**
- * Product list template
- *
- * @see Mage_Catalog_Block_Product_List
- * @var Mage_Catalog_Block_Product_List $this 
- */
+
+/** @var Mage_Catalog_Block_Product_List $this */
 ?>
 <?php
 $_productCollection = $this->getLoadedProductCollection();
@@ -46,6 +40,7 @@ $_params = $this->escapeHtml(json_encode(['form_key' => $this->getFormKey()]));
                             <?php $_imgSize = 300; ?>
                             <img id="product-collection-image-<?= $_product->getId() ?>"
                                  src="<?= $this->helper('catalog/image')->init($_product, 'small_image')->keepFrame(false)->resize($_imgSize) ?>"
+                                 srcset="<?= $this->helper('catalog/image')->init($_product, 'small_image')->keepFrame(false)->resize($_imgSize * 2) ?> 2x"
                                  alt="<?= $this->stripTags($this->getImageLabel($_product, 'small_image'), null, true) ?>" />
                         </a>
                         <?php // Product description ?>
@@ -135,6 +130,7 @@ $_params = $this->escapeHtml(json_encode(['form_key' => $this->getFormKey()]));
                             <?php $_imgSize = 210; ?>
                             <img id="product-collection-image-<?= $_product->getId() ?>"
                                  src="<?= $this->helper('catalog/image')->init($_product, 'small_image')->resize($_imgSize) ?>"
+                                 srcset="<?= $this->helper('catalog/image')->init($_product, 'small_image')->resize($_imgSize * 2) ?> 2x"
                                  alt="<?= $this->stripTags($this->getImageLabel($_product, 'small_image'), null, true) ?>" />
                         </a>
                         <div class="product-info">
