--- a/app/design/frontend/rwd/default/template/reports/product_viewed.phtml
+++ b/app/design/frontend/rwd/default/template/reports/product_viewed.phtml
@@ -6,9 +6,10 @@
  * @package     rwd_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2021-2024 The OpenMage Contributors (https://openmage.org)
- * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
+ * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
+
 /** @var Mage_Reports_Block_Product_Viewed $this */
 ?>
 <?php if ($_products = $this->getRecentlyViewedProducts()): ?>
@@ -21,7 +22,7 @@
         <?php foreach ($_products as $_item): ?>
             <li class="item">
                 <a href="<?= $this->getProductUrl($_item) ?>">
-                    <span class="product-image"><img src="<?= $this->helper('catalog/image')->init($_item, 'thumbnail')->resize(50, 50)->setWatermarkSize('30x10') ?>" width="50" height="50" alt="<?= $this->escapeHtml($_item->getName()) ?>" /></span>
+                    <span class="product-image"><img src="<?= $this->helper('catalog/image')->init($_item, 'thumbnail')->resize(50, 50)->setWatermarkSize('30x10') ?>" srcset="<?= $this->helper('catalog/image')->init($_item, 'thumbnail')->resize(100, 100)->setWatermarkSize('60x20') ?> 2x" width="50" height="50" alt="<?= $this->escapeHtml($_item->getName()) ?>" /></span>
                 </a>
                 <div class="product-details">
                     <p class="product-name">
