--- a/app/design/frontend/rwd/default/template/reports/widget/viewed/content/viewed_grid.phtml
+++ b/app/design/frontend/rwd/default/template/reports/widget/viewed/content/viewed_grid.phtml
@@ -6,7 +6,7 @@
  * @package     rwd_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2021-2024 The OpenMage Contributors (https://openmage.org)
- * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
+ * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 
@@ -25,7 +25,9 @@
             <li class="item">
                 <?php $_imgSize = 210; ?>
                 <a href="<?= $_product->getProductUrl() ?>" title="<?= $this->stripTags($_product->getName(), null, true) ?>" class="product-image">
-                    <img src="<?= $this->helper('catalog/image')->init($_product, 'small_image')->resize($_imgSize) ?>" alt="<?= $this->stripTags($_product->getName(), null, true) ?>" />
+                    <img src="<?= $this->helper('catalog/image')->init($_product, 'small_image')->resize($_imgSize) ?>"
+                         srcset="<?= $this->helper('catalog/image')->init($_product, 'small_image')->resize($_imgSize * 2) ?> 2x"
+                         alt="<?= $this->stripTags($_product->getName(), null, true) ?>" />
                 </a>
                 <div class="product-info">
                     <h3 class="product-name"><a href="<?= $_product->getProductUrl() ?>" title="<?= $this->stripTags($_product->getName(), null, true) ?>"><?= $this->helper('catalog/output')->productAttribute($_product, $_product->getName() , 'name') ?></a></h3>
