--- a/app/design/frontend/rwd/default/template/review/customer/view.phtml
+++ b/app/design/frontend/rwd/default/template/review/customer/view.phtml
@@ -6,7 +6,7 @@
  * @package     rwd_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2021-2025 The OpenMage Contributors (https://openmage.org)
- * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
+ * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 
@@ -18,7 +18,7 @@
         <h1><?= $this->__('Review Details') ?></h1>
     </div>
     <div class="product-img-box">
-        <a href="<?= $this->getProductData()->getProductUrl() ?>" title="<?= $this->escapeHtml($this->getProductData()->getName()) ?>" class="product-image"><img src="<?= $this->helper('catalog/image')->init($this->getProductData(), 'small_image')->resize(325,325) ?>" width="325" height="" alt="<?= $this->escapeHtml($this->getProductData()->getName()) ?>" /></a>
+        <a href="<?= $this->getProductData()->getProductUrl() ?>" title="<?= $this->escapeHtml($this->getProductData()->getName()) ?>" class="product-image"><img src="<?= $this->helper('catalog/image')->init($this->getProductData(), 'small_image')->resize(325,325) ?>" srcset="<?= $this->helper('catalog/image')->init($this->getProductData(), 'small_image')->resize(650,650) ?> 2x" width="325" height="" alt="<?= $this->escapeHtml($this->getProductData()->getName()) ?>" /></a>
         <?php if( $this->getRating() && $this->getRating()->getSize()): ?>
             <p class="label"><?= $this->__('Average Customer Rating:') ?></p>
             <?= $this->getReviewsSummaryHtml($this->getProductData()) ?>
