--- a/app/design/frontend/base/default/layout/blog.xml
+++ b/app/design/frontend/base/default/layout/blog.xml
@@ -7,12 +7,16 @@
     </default>
     <blog_index_index>
         <reference name="content">
-            <block type="blog/post_list" name="blog.post.list"/>
+            <block type="blog/post_list" name="blog.post.list">
+                <action method="setTemplate"><template>blog/list.phtml</template></action>
+            </block>
         </reference>
     </blog_index_index>
     <blog_index_view>
         <reference name="content">
-            <block type="blog/post_view" name="blog.post.view"/>
+            <block type="blog/post_view" name="blog.post.view">
+                <action method="setTemplate"><template>blog/view.phtml</template></action>
+            </block>
         </reference>
     </blog_index_view>
 </layout>
