--- a/app/design/frontend/base/default/template/blog/view.phtml
+++ b/app/design/frontend/base/default/template/blog/view.phtml
@@ -8,6 +8,11 @@
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 
-
+/** @var Maho_Blog_Block_Post_View $this */
+$post = $this->getPost();
 ?>
 
+<h1><?= $post->getTitle() ?></h1>
+<div>
+    <?= $post->getContent() ?>
+</div>
